--- a/medicine_shop_project/client_side/templates/base.html
+++ b/medicine_shop_project/client_side/templates/base.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <div>
           <a href="{% url 'home' %}">Home</a>
-          <a href="{% url 'products' %}">Products</a>
+          <a href="{% url 'medicine' %}">Medicine</a>
         </div>
         <div>
         </div>
