Some fixes of templates and views of medicine.

--- a/medicine_shop_project/client_side/templates/home.html
+++ b/medicine_shop_project/client_side/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <header>
   <a href="{% url 'home' %}">Home</a>
-  <a href="{% url 'medicine' %}">Medicine</a>
+  <a href="{% url 'medicines' %}">Medicine</a>
 </header>
 <body>
 <h3>{{ time_now|date:'d M Y' }}</h3>
