--- a/medicine_shop_project/client_side/templates/one_medicine.html
+++ b/medicine_shop_project/client_side/templates/one_medicine.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} Информация об одном лекарстве - {{medicine.trade_name}} {% endblock %}
+{% block title %} Информация о лекарстве - {{medicine.trade_name}} {% endblock %}
 
 
 {% block content %}
