Some fixes of templates and views of medicine again.

--- a/medicine_shop_project/client_side/templates/medicine.html
+++ b/medicine_shop_project/client_side/templates/medicine.html
@@ -48,7 +48,9 @@ Medicines
                 {{ medicine.price }}
             </td>
             <td>
-                {{ medicine.manufacturer }}
+                {% for manufacturer in medicine.manufacturer.all %}
+                    {{ manufacturer }}
+                {% endfor %}
             </td>
         </tr>
 
