--- a/medicine_shop_project/client_side/templates/base.html
+++ b/medicine_shop_project/client_side/templates/base.html
@@ -1,30 +1,47 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-    <title>{% block title %}  {% endblock title %}</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>{% block title %}  {% endblock title %}</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'css/fonts.css' %}" rel="stylesheet" type="text/css" media="all" />
+
 </head>
-<header>
-    <div class="navbar">
-        <div>
-          <a href="{% url 'home' %}">Home</a>
-          <a href="{% url 'medicines' %}">Medicine</a>
-        </div>
-        <div>
-        </div>
-    </div>
-</header>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<h1><span class="fa fa-plus-square"></span><a href="#">MY FARMACY</a></h1>
+			<h3><span style="color: white;">{{ time_now|date:'d M Y' }}</span></h3>
+		</div>
+		<div id="menu">
+			<ul>
+				{% if title == 'index' %}
+					<li class="current_page_item"><a href="{% url 'home' %}" accesskey="1" title="Home">Home</a></li>
+					<li><a href="{% url 'medicines' %}" accesskey="2" title="Medicine">Medicine</a></li>
+				{% else %}
+					<li><a href="{% url 'home' %}" accesskey="1" title="Home">Home</a></li>
+					<li class="current_page_item"><a href="{% url 'medicines' %}" accesskey="2" title="Medicine">Medicine</a></li>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
+</div>
 <body>
 {% block main %}
 
-
+<div id="wrapper">
 {% block content %}
 {% endblock content %}
-
+</div>
 
 {% endblock main %}
+<div id="copyright" class="container">
+	<p></p>
+</div>
 </body>
 </html>
