--- a/medicine_shop_project/client_side/templates/home.html
+++ b/medicine_shop_project/client_side/templates/home.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<header>
-  <a href="{% url 'home' %}">Home</a>
-  <a href="{% url 'medicines' %}">Medicine</a>
-</header>
-<body>
-<h3>{{ time_now|date:'d M Y' }}</h3>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}
+Medicines
+{% endblock title %}
+
+{% block content %}
+<div class="medicine-title">Главная страница</div>
+<div id="featured-wrapper">
+    <div id="featured" class="extra2 margin-btm container">
+    </div>
+</div>
+{% endblock content %}
