--- a/medicine_shop_project/client_side/templates/home.html
+++ b/medicine_shop_project/client_side/templates/home.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}
 Medicines
 {% endblock title %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
 <div class="medicine-title">Главная страница</div>
+
 <div id="featured-wrapper">
     <div id="featured" class="extra2 margin-btm container">
     </div>
