--- a/medicine_shop_project/client_side/templates/client_side/medicine_create.html
+++ b/medicine_shop_project/client_side/templates/client_side/medicine_create.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'client_side/base.html' %}
 
 {% block content %}
 <h1>Лекарство</h1>
@@ -9,3 +9,8 @@
     <input type="submit" value="Save" />
 </form>
 {% endblock content %}
+
+
+
+
+
