--- a/medicine_shop_project/client_side/templates/client_side/medicine.html
+++ b/medicine_shop_project/client_side/templates/client_side/medicine.html
@@ -64,7 +64,7 @@ Medicines
                             </td>
                             <td>
 
-                                <a class="fa-solid fa-cart-shopping"  title="Добавить в корзину" href="{% url 'add_to_cart' medicine.id %}"></a></h3>
+                                <a class="fa-solid fa-cart-shopping" style="text-decoration: none;"  title="Добавить в корзину" href="{% url 'add_to_cart' medicine.id %}"></a></h3>
                             </td>
                         </tr>
                     {% endfor %}
